Use valueOf()
- Add @Override
- Remove redundant parentheses
- Use diamond
- No need to nest
- Add serialVersionUID